<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/pedidos_temp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/pedidos_permanentes"
            android:title="@string/menu_gallery" />
    </group>

    <item android:title="@string/configura_es">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:title="@string/menu_perfil" />
            <item
                android:id="@+id/cadastro_tabela"
                android:title="@string/tabela_de_preco" />

        </menu>
    </item>

</menu>
