<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/pedidos_temp">

    <fragment
        android:id="@+id/pedidos_temp"
        android:name="br.com.marzinhogas.entregadores.Controlers.Fragments.PedidosTemporarios.PedidoTemporarios"
        android:label="@string/menu_home"
        tools:layout="@layout/pedidos_temporarios" />

    <fragment
        android:id="@+id/pedidos_permanentes"
        android:name="br.com.marzinhogas.entregadores.Controlers.Fragments.PedidoPermanentes.PedidosPermanentes"
        android:label="@string/menu_gallery"
        tools:layout="@layout/pedido_permanentes" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.com.marzinhogas.entregadores.Controlers.Fragments.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="br.com.marzinhogas.entregadores.Controlers.Fragments.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="br.com.marzinhogas.entregadores.Controlers.Fragments.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="br.com.marzinhogas.entregadores.Controlers.Fragments.CadastrarDispositivo.Cadastrodispositivo"
        android:label="@string/cadastro_dispositivo"
        tools:layout="@layout/cadastro_dispositivo" />
</navigation>