<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_de_dispositivo"
            android:textSize="35sp"
            android:gravity="center"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome_do_usu_rio_do_telefone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_nome_dono_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/imei_do_celular">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/imei_do_celular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_cadastrar_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/corner_color"
            android:textColor="@android:color/white"
            android:text="@string/cadastrar" />

    </LinearLayout>
</LinearLayout>