<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/nome_usario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:text="@string/nome_do_usu_rio"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/txt_nome_usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_toStartOf="@id/img_delete"
            android:layout_toEndOf="@id/nome_usario"
            android:text="@string/fernando_ant_nio_da_silva_filho"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/imei_celular_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_nome_usuario"
            android:layout_alignParentStart="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:text="@string/imei"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/imei_celular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_nome_usuario"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/imei_celular_user"
            android:text="@string/_356456778677657"
            android:textColor="@android:color/white" />

        <View
            android:id="@+id/linha_cadastro_celular"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/imei_celular"
            android:layout_marginTop="8dp"
            android:background="@android:color/white" />

        <ImageButton
            android:id="@+id/img_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:src="@drawable/ic_delete_black_24dp" />

    </RelativeLayout>
</LinearLayout>